Add shindas info

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <img src="https://emis1.seu.edu.ge/assets/images/default-user.jpg" alt="student" />
             <div class="divider"></div>
             <div class="info">
-                <p><strong class="bolder-text">ID:</strong> 45224</p>
-                <p><strong class="bolder-text">სახელი:</strong> ალადაშვილი ბექა</p>
-                <p><strong class="bolder-text">პირადი ნომერი:</strong> 01027087976</p>
+                <p><strong class="bolder-text">ID:</strong> 45448</p>
+                <p><strong class="bolder-text">სახელი:</strong> შინდაგორიძე გიორგი</p>
+                <p><strong class="bolder-text">პირადი ნომერი:</strong> 01027087790</p>
                 <p><strong class="bolder-text">საგანმანათლებლო ერთეული:</strong> ბიზნესისა და ტექნოლოგიების</p>
                 <p><strong class="bolder-text">საგანმანათლებლო პროგრამა:</strong> ბიზნესის ადმინისტრირება</p>
                 <p><strong class="bolder-text">სემესტრი:</strong> 3</p>
